# kitchen-microsegmenter

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: kitchen.json
src/microseg/: __init__.py  cli.py  model.py  nftables.py  policy.py
tests/: test_nftables.py  test_policy.py
